fix scrollbar?

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -23,7 +23,7 @@
 }
 
 .weakbackground::-webkit-scrollbar-track {
-  background: #f3f4f6;
+  background: #f5f5f5;
 }
 
 .inputscroll::-webkit-scrollbar-track {
